--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color:orangered;
+  width: 100vw;
+  height: 100vh;
+  color: white;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+input{
+  border-radius: 25px;
+  width: 200px;
+  height: 25px;
+  border: none;
+  
+}
+
+button{
+  border-radius: 25px;
+  border: none;
+  height: 35px;
+  justify-self: center;
+  align-self: center;
+}
+
+.frame{
+  max-width: 500px;
+  max-height: 500px;
+  min-width: 500px;
+  min-height: 500px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: black;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gif{
+  position:absolute;
+  align-self: center;
+  justify-self: center;
 }
