--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   text-align: center;
   background-color:orangered;
   width: 100vw;
-  height: 100vh;
+ 
   color: white;
   display: flex;
   justify-content: center;
@@ -19,23 +19,31 @@ header footer{
   background-color: orange;
 }
 
+.input {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 input{
   border-radius: 25px;
-  width: 200px;
+  width: 300px;
   height: 55px;
   border: none;
-  box-shadow: lightslategray 0 9px;
-  
+  box-shadow: lightslategray 3px 6px;
+  padding-left: 20px;
 }
 
 button{
-  border-radius: 30%;
+  border-radius: 25px;
   border: none;
-  height: 60px;
-  display: inline-block;
-  top: 10%;
-  padding: 15px 20px;
-  box-shadow: lightslategray 0 9px;
+  box-shadow: lightslategray 3px 6px;
+  text-align: center;
+  width: 150px;
+  height: 55px;
+  font-family: arpona;
+  background-color: black;
+  color: white;
   
 }
 button:hover{
@@ -60,6 +68,7 @@ button:active{
   background-color: black;
   border-radius: 10%;
   border:20px;
+  
 }
 
 .gif{
@@ -79,4 +88,51 @@ img{
   max-width: 500px;
   max-height: 500px;
   
+}
+
+@media screen and (max-width: 500px) {
+  .frame{
+    max-width: 300px;
+    min-width: 300px;
+    min-height: 300px;
+    max-height: 300px;
+    border: none;
+    border-radius: 0%;
+    
+  }
+  
+  img {
+    max-width: 280px;
+    max-height: 280px;
+    
+  }
+  button, input {
+    width: 80%;
+  }
+
+  .input {
+    padding-left: 0;
+    margin-top: 10px;
+  }
+
+  .title {
+    width: 80%;
+    
+ 
+  }
+  .search-comp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+  .App {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .dynamic {
+    display: none;
+  }
 }
